--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - gcc_impl_linux-64 >=7.5
   - gxx_impl_linux-64 >=7.5
 
-  - r-base 4.0.*,>=4.0.3
+  - r-base=4.2.0
   - r-irkernel
   - r-biocmanager
 
