--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,21 +1,12 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-#
-# See https://github.com/r-lib/actions/tree/master/examples#readme for
-# additional example workflows available for the R community.
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+on:
+  push:
+    branches: [dev, master, fix-ci]
+  pull_request:
+    branches: [dev, master]
 
-# ======================================================== #
-# Determines when the action is triggered                  #
-# ======================================================== #
-
-on: [push, pull_request]
-name: linter
-
-# ======================================================== #
-# Determine actions to take                                #
-# ======================================================== #
+name: lint
 
 jobs:
   lint:
@@ -23,35 +14,19 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-        - name: Checking out the repository
-          uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-        - name: Setting up R
-          uses: r-lib/actions/setup-r@v1
-          with:
-            use-public-rspm: true
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
 
-        - name: Installing dependencies
-          uses: r-lib/actions/setup-r-dependencies@v1
-          with:
-            extra-packages: lintr
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::lintr, local::.
+          needs: lint
 
-        - name: Picking on the coding style
-          run: |
-            library(lintr)
-            style_rules <- list(
-              T_and_F_symbol_linter, assignment_linter, closed_curly_linter,
-              commas_linter, commented_code_linter, todo_comment_linter,
-              cyclocomp_linter, object_length_linter, equals_na_linter,
-              function_left_parentheses_linter, infix_spaces_linter,
-              line_length_linter, no_tab_linter, object_usage_linter,
-              open_curly_linter, paren_brace_linter, absolute_path_linter,
-              nonportable_path_linter, pipe_continuation_linter,
-              semicolon_terminator_linter, seq_linter, single_quotes_linter,
-              spaces_inside_linter, spaces_left_parentheses_linter,
-              trailing_blank_lines_linter, trailing_whitespace_linter,
-              undesirable_function_linter, undesirable_operator_linter,
-              unneeded_concatenation_linter
-            )
-            lint_package(linters = style_rules)
-          shell: Rscript {0}
+      - name: Lint
+        run: lintr::lint_package()
+        shell: Rscript {0}
+        env:
+          LINTR_ERROR_ON_LINT: true
