--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -26,7 +26,23 @@ jobs:
           needs: lint
 
       - name: Lint
-        run: lintr::lint_package()
+        run: |
+          library(lintr)
+          style_rules <- list(
+            T_and_F_symbol_linter(), assignment_linter(), brace_linter(),
+            commas_linter(), commented_code_linter(), todo_comment_linter(),
+            cyclocomp_linter(), equals_na_linter(),
+            function_left_parentheses_linter(), infix_spaces_linter(),
+            line_length_linter(), whitespace_linter(), object_usage_linter(),
+            absolute_path_linter(),
+            nonportable_path_linter(), pipe_continuation_linter(),
+            semicolon_linter(), seq_linter(), quotes_linter(),
+            spaces_inside_linter(), spaces_left_parentheses_linter(),
+            trailing_blank_lines_linter(), trailing_whitespace_linter(),
+            undesirable_function_linter(), undesirable_operator_linter(),
+            unnecessary_concatenation_linter()
+          )
+          lint_package(linters = style_rules)
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
