--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,3 +143,6 @@ importFrom(utils,download.file)
 importFrom(utils,read.table)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
+importFrom(withr,local_options)
+importFrom(withr,with_options)
+importFrom(withr,with_par)
